# SizerSkeleton

./: CMakeLists.txt
module/OpenSTA/include/sta/: StaConfig.hh
src/: main.cpp
